로그인 시 오버플로우 해결 중

--- a/minigames/pubspec.yaml
+++ b/minigames/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
     - assets/images/brown_person.png
     - assets/images/green_person.png
     - assets/images/yellow_person.png
+    - assets/images/kakao_login.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
