--- a/minigames/pubspec.yaml
+++ b/minigames/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  kakao_flutter_sdk: ^1.9.5
 
 
   # The following adds the Cupertino Icons font to your application.
