--- a/minigames/android/build.gradle
+++ b/minigames/android/build.gradle
@@ -1,3 +1,8 @@
+plugins {
+    id 'com.android.application' version '8.2.1' apply false
+    id 'com.android.library' version '8.2.1' apply false
+}
+
 allprojects {
     repositories {
         google()
