--- a/minigames/pubspec.yaml
+++ b/minigames/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   kakao_flutter_sdk: ^1.9.5
+  flutter_dotenv: ^5.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
