--- a/minigames/pubspec.yaml
+++ b/minigames/pubspec.yaml
@@ -30,8 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  kakao_flutter_sdk: ^1.9.5
+  kakao_flutter_sdk: ^1.9.6
   flutter_dotenv: ^5.0.2
+  shared_preferences: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -68,6 +69,7 @@ flutter:
     - assets/images/green_person.png
     - assets/images/yellow_person.png
     - assets/images/kakao_login.png
+    - .env
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
