음악 수정중

--- a/minigames/android/app/build.gradle
+++ b/minigames/android/app/build.gradle
@@ -4,6 +4,9 @@ plugins {
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
+kotlin {
+    jvmToolchain(17)
+}
 
 android {
     namespace = "com.example.minigames"
@@ -11,14 +14,20 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        //jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = JavaVersion.VERSION_17
+        //jvmToolchain(17)
     }
-
+    java {
+        toolchain {
+            languageVersion.set(JavaLanguageVersion.of(17))  // ✅ JVM Toolchain을 Java 17로 고정
+        }
+    }
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.minigames"
@@ -41,4 +50,11 @@ android {
 
 flutter {
     source = "../.."
+}
+configurations.all {
+    resolutionStrategy.eachDependency { details ->
+        if (details.requested.group == 'org.jetbrains.kotlin') {
+            details.useVersion "1.8.22"
+        }
+    }
 }
