--- a/minigames/pubspec.yaml
+++ b/minigames/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  assets_audio_player: ^3.1.1
+  audioplayers: ^5.2.0
 
 dev_dependencies:
   flutter_test:
@@ -78,7 +78,7 @@ flutter:
     - assets/vectors/setting.svg
     - assets/vectors/user.svg
     - assets/vectors/heart.svg
-    - assets/audios/music.mp3
+    - assets/audios/Background.mp3
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
