--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -7,6 +7,7 @@
         "start": "node app.js"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "dotenv": "^16.0.0",
         "express": "^5.0.1",
         "mysql2": "^3.2.0"
