--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
 
 volumes:
   db_data:
