--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,12 +4,14 @@ FROM node:16
 # 작업 디렉토리 설정
 WORKDIR /app
 
+# package.json과 package-lock.json 복사
+COPY ./app/package.json ./package.json
+COPY ./app/package-lock.json ./package-lock.json
 # 의존성 설치
-COPY ./app/package.json ./
 RUN npm install
 
 # 소스 코드 복사
-COPY . .
+COPY ./app .
 
 # 애플리케이션 실행
 CMD ["npm", "start"]
