--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@
 
 # Backend node_modules
 /backend/app/node_modules/
+/backend/my-backend*.tar
+/backend/my_database_dump.tar
 
 # Keystore files
 /keystore/*.keystore
