--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@
 
 # Backend node_modules
 /backend/app/node_modules/
+backend/my-backend-v1.tar
+backend/my-backend-v2.tar
 
 # Keystore files
 /keystore/*.keystore
