--- a/minigames/android/app/src/main/AndroidManifest.xml
+++ b/minigames/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:label="minigames"
+        android:label="DumbWaysGongDae"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
 
